# labs-gen-ai-experiments

./: .gitignore  README.md
.github/: pull_request_template.md
01-resource-referral/: .gitignore  README.md  debugging.py  engine.py  langgraph-workflow.py  my_tools.py  requirements.in  requirements.txt  tool_calling.py
02-household-queries/: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  api_helpers.py  chainlit-household-bot.py  chainlit-summaries.py  chainlit.md  debugging.py  decompose-questions.py  decompose_and_summarize.py  dspy_engine.py  eval.py  guru_api_access.md  ingest.py  ingest_test.py  llm.py  optimize_encoder.py  orig_question-guru_cards.json  run.py  (+11 more)
06-service-recommender/backend/: .env-template  Dockerfile  README.md  bootstrap.py  entrypoint.sh  haystack_rag.py  hs_utils.py  pyproject.toml  requirements.txt  simpler_grants_gov-openapi.json  simpler_grants_gov-openapi.yaml
06-service-recommender/backend/common/: app_config.py  haystack_utils.py  hs_utils.py  phoenix_utils.py
06-service-recommender/backend/hayhooks_pipelines/: Dockerfile
06-service-recommender/backend/hayhooks_pipelines/first/: pipeline_wrapper.py
06-service-recommender/backend/pipelines/first/: pipeline_wrapper.py  rag_pipeline_openai.py
06-service-recommender/backend/pipelines/second/: pipeline_wrapper.py  rag_pipeline_bedrock.py
06-service-recommender/backend/src/: bootstrap.py  first_mcp.py  haystack_chat_memory.py  haystack_crawler.py  haystack_rag.py  mcp_server.py  mcp_server_simpler_grants.py  mcp_server_simpler_grants_streamable.py  mcp_simpler_grants_client.py
06-service-recommender/backend/src/common/: app_config.py  components.py  haystack_utils.py  phoenix_utils.py  pii_filter.py  pii_span_processor.py  presidio_pii_filter.py
06-service-recommender/backend/src/pipelines/ask_until_answered/: pipeline_wrapper.py
06-service-recommender/backend/src/pipelines/ask_until_answered_consolidated/: pipeline_wrapper.py
06-service-recommender/backend/src/pipelines/crawler/: pipeline_wrapper.py
06-service-recommender/backend/src/pipelines/first/: pipeline_wrapper.py
06-service-recommender/backend/src/pipelines/second/: pipeline_wrapper.py
06-service-recommender/backend/src/pipelines/third_mcp/: pipeline_wrapper.py
06-service-recommender/simpler_grants_gov/simpler_grants_service/: README.md  openapi.yaml  pyproject.toml  setup.cfg
06-service-recommender/simpler_grants_gov/simpler_grants_service/.openapi-generator/: FILES
06-service-recommender/simpler_grants_gov/simpler_grants_service/src/openapi_server/: main.py  security_api.py
06-service-recommender/simpler_grants_gov/simpler_grants_service/src/openapi_server/apis/: agency_v1_api.py  agency_v1_api_base.py  extract_v1_api.py  extract_v1_api_base.py  health_api.py  health_api_base.py  opportunity_v1_api.py  opportunity_v1_api_base.py  user_v1_internal_only_api.py  user_v1_internal_only_api_base.py
06-service-recommender/simpler_grants_gov/simpler_grants_service/src/openapi_server/impl/: health_impl.py
06-service-recommender/simpler_grants_gov/simpler_grants_service/src/openapi_server/models/: agency_filter_v1.py  agency_list_request.py  agency_list_response.py  agency_opp_search_filter_v1.py  agency_pagination_v1.py  agency_response.py  agency_search_filter_v1.py  agency_search_pagination_v1.py  agency_search_request.py  agency_search_response_v1.py  agency_v1.py  applicant_type_filter_v1.py  assistance_listing_number_filter_v1.py  award_ceiling_filter_v1.py  award_floor_filter_v1.py  close_date_filter_v1.py  competition_alpha.py  competition_form_alpha.py  competition_instruction_alpha.py  date_range.py  error_response.py  estimated_total_program_funding_filter_v1.py  expected_number_awards_filter_v1.py  experimental_v1.py  extract_metadata_filter_v1.py  extract_metadata_list_response.py  extract_metadata_pagination_v1.py  extract_metadata_request.py  extract_metadata_response.py  form_alpha.py  form_instruction.py  funding_category_filter_v1.py  funding_instrument_filter_v1.py  has_active_opportunity_filter_v1.py  healthcheck_metadata.py  healthcheck_response.py  is_cost_sharing_filter_v1.py  is_test_agency_filter_v1.py  opportunity_assistance_listing_v1.py  opportunity_attachment_v1.py  (+46 more)
06-service-recommender/simpler_grants_gov/simpler_grants_service/tests/: test_agency_v1_api.py  test_extract_v1_api.py  test_health_api.py  test_opportunity_v1_api.py  test_user_v1_internal_only_api.py
(+348 files in other folders)
