[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix-otel>=0.10.3",
    "haystack-ai>=2.14.2",
    "openinference-instrumentation-haystack>=0.1.24",
    "opentelemetry-sdk>=1.34.0",
    "opentelemetry-exporter-otlp>=1.34.0",
    "openai>=1.85.0",
    "python-dotenv>=1.1.0",
]
