[project]
name = "backend"
version = "0.1.0"
description = "Haystack pipelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix-otel>=0.10.3",
    "haystack-ai>=2.14.2",
    "openinference-instrumentation-haystack>=0.1.24",
    "opentelemetry-sdk>=1.34.0",
    "opentelemetry-exporter-otlp>=1.34.0",
    "openai>=1.85.0",
    "python-dotenv>=1.1.0",
    "hayhooks>=0.8.0",
    "arize-phoenix-client>=1.10.0",
    "amazon-bedrock-haystack>=3.7.0",
    "mcp-haystack>=0.4.0",
    "mcp-server-time>=0.6.2",
    "fastapi-mcp>=0.3.4",
    "fastmcp==2.8.1",
]
